--- a/block.html
+++ b/block.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="first">
+        <h1>MohammadRokib</h1>
+        <h1>MohammadRokib</h1>
+        <span>MohammadRokib</span>
+        <span>MohammadRokib</span>
+        <a href="google.com">google</a>
+        <a href="codeforces.com">CF</a>
+
+    </div>
+
+    <div class="second">
+        <h1>MohammadRokib</h1>
+        <h1>
+            MohammadRokib</h1>
+        <span>MohammadRokib</span>
+        <span>MohammadRokib</span>
+        <a href="google.com">google</a>
+        <a href="codeforces.com">CF</a>
+    </div>
 </body>
 </html>
