--- a/pseudo.html
+++ b/pseudo.html
@@ -14,6 +14,20 @@
         a:visited {
             color: red;
         }
+
+        li:first-child {
+            color: cyan;
+        }
+        li:nth-child(4) {
+            color: blueviolet;
+        }
+
+        h3::before {
+            content: 'Big ';
+        }
+        h3::after {
+            content: ' after';
+        }
     </style>
 </head>
 <body>
@@ -23,5 +37,23 @@
     <a href="https://www.google.com/">Google</a>
     <a href="https://codeforces.com/">Codeforces</a>
     <a href="https://cses.fi/">CSES</a>
+
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>item 5</li>
+        <li>item 6</li>
+    </ul>
+
+    <br>
+
+    <h3>Middle Header 1</h3>
+    <h3>Middle Header 2</h3>
+    <h3>Middle Header 3</h3>
+    <h3>Middle Header 4</h3>
+    <h3>Middle Header 5</h3>
+    <h3>Middle Header 6</h3>
 </body>
 </html>
